[gd_scene load_steps=6 format=3 uid="uid://1f0pvyl7owm2"]

[ext_resource type="PackedScene" uid="uid://ij80ps8ylook" path="res://src/mouse_camera.tscn" id="1_6pcyv"]
[ext_resource type="Script" path="res://src/day_10/day_10.gd" id="1_wvfh8"]
[ext_resource type="Texture2D" uid="uid://cim0qe6in2n7n" path="res://src/day_10/pipes_green.svg" id="3_b8f5y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y3wjm"]
texture = ExtResource("3_b8f5y")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:1/0 = 0
3:0/0 = 0
3:3/0 = 0
3:2/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_n3h7e"]
tile_size = Vector2i(128, 128)
sources/2 = SubResource("TileSetAtlasSource_y3wjm")

[node name="Day10" type="Node2D"]
script = ExtResource("1_wvfh8")

[node name="MouseCamera" parent="." instance=ExtResource("1_6pcyv")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_n3h7e")
format = 2
layer_0/name = "Side Indicator"
layer_1/name = "Start"
layer_1/modulate = Color(1, 0.466667, 0, 1)
layer_1/tile_data = PackedInt32Array(65538, 131074, 2)
layer_2/name = "Water"
layer_2/modulate = Color(0.4, 0.8, 1, 1)
layer_2/tile_data = PackedInt32Array(0, 2, 2, 2, 65538, 2, 131074, 65538, 3, 131072, 2, 3, 1, 131074, 3, 65536, 131074, 2, 131073, 131074, 3)
layer_3/name = "Pipes"
layer_3/tile_data = PackedInt32Array(0, 2, 0, 1, 131074, 1, 131073, 131074, 1, 131074, 65538, 1, 131072, 2, 1, 2, 65538, 0, 65536, 131074, 0, 65538, 131074, 0, 3, 2, 0, 65539, 131074, 0, 131075, 2, 1, 4, 131074, 1, 131076, 131074, 1, 5, 65538, 0, 65541, 131074, 0, 131077, 65538, 1)
layer_4/name = "Visitor"
layer_4/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load:"

[node name="LoadTestInputSimple" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input_simple.txt"

[node name="LoadTestInputComplex" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input_complex.txt"

[node name="LoadRealInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "input.txt"

[node name="LoadPart2SimpleInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "part_2_simple.txt"

[node name="LoadPart2SqueezeInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "part_2_squeeze.txt"

[node name="LoadPart2LargeInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "part_2_large.txt"

[node name="LoadPart2JunkInput" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "part_2_junk.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TracePipeLoopButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
disabled = true
text = "Trace Pipe Loop"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Pipe Circumference:"

[node name="PipeCircumferenceValue" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Not yet calculated"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="FloodFilleSidesButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
disabled = true
text = "FloodFillSides"

[node name="PurpleTilesLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Purple Tiles:"

[node name="PurpleTilesCount" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Not yet calculated"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="OrangeTilesLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Orange Tiles:"

[node name="OrangeTilesCount" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Not yet calculated"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadTestInputSimple" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/test_input_simple.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadTestInputComplex" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/test_input_complex.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadRealInput" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadPart2SimpleInput" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/part_2_simple.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadPart2SqueezeInput" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/part_2_squeeze.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadPart2LargeInput" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/part_2_large.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadPart2JunkInput" to="." method="load_and_populate_from_file" binds= ["res://src/day_10/part_2_junk.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/TracePipeLoopButton" to="." method="start_trace_pipe_loop"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer3/FloodFilleSidesButton" to="." method="start_flood_fill_sides"]
